Fixed landing's  popular colors section causing overflow on mobile view

--- a/less/_pages/_landing.less
+++ b/less/_pages/_landing.less
@@ -162,6 +162,14 @@ html {
     @media @break-desktop {
       height: 100vh;
     }
+
+    &.landing__popular-colors {
+      height: auto;
+
+      @media @break-tablet {
+        height: calc(100vh - 64px);
+      }
+    }
   }
 
   .wrapper {
